Add e-commerce cart & checkout to Hardware & DIY section
- cart.js (680 lines): Full cart engine with pricing, localStorage cart,
  slide-in drawer, 3-step checkout modal, 3 delivery methods
- Delivery options: Click & Collect (FREE), Truck (Leinster, from €35),
  Postage/Courier (from €7.95)
- Auto-generates realistic prices for all 639 products by subcategory
- Transforms Enquire buttons into Add to Cart with price display
- Cart badge on header icon, toast notifications, order confirmation
- Responsive design for mobile
- style.css: 400+ lines of cart/checkout CSS matching site design

--- a/hardware.html
+++ b/hardware.html
@@ -2280,6 +2280,7 @@
   <script src="components.js"></script>
   <script src="search.js"></script>
   <script src="main.js"></script>
+  <script src="cart.js"></script>
   <script>lucide.createIcons();</script>
 </body>
 </html>
