Committing all current changes

--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
   <title>Contact Us | Navan Hire & Hardware</title>
   <meta name="description" content="Contact Navan Hire & Hardware on 046 902 2535. Located on the Kells Road, Navan, Co. Meath. Open Mon–Fri 7am–5pm, Sat 8:30am–1pm."/>
+  <link rel="canonical" href="https://KeithD30.github.io/navanhire.github.io/contact.html"/>
+  <meta property="og:title" content="Contact Us | Navan Hire &amp; Hardware"/>
+  <meta property="og:description" content="Contact Navan Hire &amp; Hardware on 046 902 2535. Kells Road, Navan, Co. Meath. Open Mon–Fri 7am–5pm, Sat 8:30am–1pm."/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://KeithD30.github.io/navanhire.github.io/contact.html"/>
+  <meta property="og:site_name" content="Navan Hire &amp; Hardware"/>
+  <meta property="og:locale" content="en_IE"/>
+  <meta name="twitter:card" content="summary"/>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700;800&family=Barlow:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css"/>
@@ -31,7 +40,7 @@
         <div class="contact-detail">
           <div class="contact-detail-icon"><i data-lucide="phone"></i></div>
           <div>
-            <h4>Phone</h4>
+            <h3>Phone</h3>
             <a href="tel:0469022535">046 902 2535</a>
           </div>
         </div>
@@ -39,7 +48,7 @@
         <div class="contact-detail">
           <div class="contact-detail-icon">📧</div>
           <div>
-            <h4>Email</h4>
+            <h3>Email</h3>
             <a href="mailto:hiredesk@nhh.ie" style="color:var(--red);font-weight:600">hiredesk@nhh.ie</a>
           </div>
         </div>
@@ -47,7 +56,7 @@
         <div class="contact-detail">
           <div class="contact-detail-icon"><i data-lucide="map-pin"></i></div>
           <div>
-            <h4>Address</h4>
+            <h3>Address</h3>
             <p>Navan Hire & Hardware<br>Whistlemount, Kells Road<br>Navan, Co. Meath<br>C15 FX6Y</p>
           </div>
         </div>
@@ -55,7 +64,7 @@
         <div class="contact-detail">
           <div class="contact-detail-icon">🕐</div>
           <div>
-            <h4>Opening Hours</h4>
+            <h3>Opening Hours</h3>
             <p>Monday – Friday: 7:00am – 5:00pm<br>Saturday: 8:30am – 1:00pm<br>Sunday: Closed</p>
           </div>
         </div>
@@ -63,7 +72,7 @@
         <div class="contact-detail">
           <div class="contact-detail-icon">🏋️</div>
           <div>
-            <h4>Safety Training</h4>
+            <h3>Safety Training</h3>
             <p>For safety training enquiries, visit<br><a href="https://www.nationaltrainingsolutions.ie" target="_blank" style="color:var(--red)">nationaltrainingsolutions.ie</a></p>
           </div>
         </div>
