--- a/index.html
+++ b/index.html
@@ -2,13 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
   <title>Navan Hire & Hardware | Meath's One-Stop Hire & Hardware Shop</title>
   <meta name="description" content="Navan Hire & Hardware – Meath's leading provider of hardware, plant hire, powered access and building supplies since 1986."/>
+  <link rel="canonical" href="https://KeithD30.github.io/navanhire.github.io/index.html"/>
+  <meta property="og:title" content="Navan Hire &amp; Hardware | Meath's One-Stop Hire &amp; Hardware Shop"/>
+  <meta property="og:description" content="Meath's leading provider of hardware, plant hire, powered access and building supplies since 1986."/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://KeithD30.github.io/navanhire.github.io/index.html"/>
+  <meta property="og:site_name" content="Navan Hire &amp; Hardware"/>
+  <meta property="og:locale" content="en_IE"/>
+  <meta name="twitter:card" content="summary"/>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700;800&family=Barlow:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css"/>
   <script src="https://unpkg.com/lucide@latest"></script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Navan Hire & Hardware",
+    "url": "https://KeithD30.github.io/navanhire.github.io/",
+    "description": "Meath\u2019s leading provider of hardware, plant hire, powered access and building supplies since 1986.",
+    "publisher": { "@id": "https://KeithD30.github.io/navanhire.github.io/#business" }
+  }
+  </script>
 </head>
 <body>
   <div class="topbar" data-component></div>
@@ -30,7 +49,7 @@
     <div class="split-hero-panel split-hero-panel--materials">
       <div class="split-hero-content">
         <div class="split-badge split-badge--red">100% Irish Owned</div>
-        <h1 class="split-hero-title split-hero-title--dark">Building<br>Materials</h1>
+        <h2 class="split-hero-title split-hero-title--dark">Building<br>Materials</h2>
         <p class="split-hero-desc split-hero-desc--dark">Thousands of products in stock — timber, insulation, plumbing, paints, tools, PPE and much more. Trade and retail welcome.</p>
         <div class="split-hero-actions">
           <a href="contact.html" class="btn btn-primary btn-lg">Enquire Now</a>
@@ -154,25 +173,25 @@
       <div class="products-grid">
         <div class="product-card">
           <div class="product-img product-img--digger"><i data-lucide="tractor" class="product-emoji-icon"></i></div>
-          <h4>5 Ton Kubota U55-4</h4>
+          <h3>5 Ton Kubota U55-4</h3>
           <p>Powerful 5-tonne excavator for medium groundwork projects</p>
           <a href="contact.html" class="btn btn-outline btn-sm">Enquire</a>
         </div>
         <div class="product-card">
           <div class="product-img product-img--dumper"><i data-lucide="container" class="product-emoji-icon"></i></div>
-          <h4>6 Ton Dumper</h4>
+          <h3>6 Ton Dumper</h3>
           <p>High-capacity dumper for moving large volumes of material</p>
           <a href="contact.html" class="btn btn-outline btn-sm">Enquire</a>
         </div>
         <div class="product-card">
           <div class="product-img product-img--lift"><i data-lucide="arrow-up-from-line" class="product-emoji-icon"></i></div>
-          <h4>Electric Scissor Lift</h4>
+          <h3>Electric Scissor Lift</h3>
           <p>Safe, quiet electric scissor lifts for indoor and outdoor use</p>
           <a href="contact.html" class="btn btn-outline btn-sm">Enquire</a>
         </div>
         <div class="product-card">
           <div class="product-img product-img--dumper"><i data-lucide="hammer" class="product-emoji-icon"></i></div>
-          <h4>Breakers & Drilling</h4>
+          <h3>Breakers & Drilling</h3>
           <p>Electric and pneumatic breakers for concrete and groundwork</p>
           <a href="contact.html" class="btn btn-outline btn-sm">Enquire</a>
         </div>
