--- a/nhh-portal-demo.html
+++ b/nhh-portal-demo.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Trade Portal | Navan Hire &amp; Hardware</title>
+<meta name="robots" content="noindex, nofollow"/>
 <meta name="description" content="Trade customer portal — view machines on hire, request off-hires, track bookings and download invoices."/>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700;800&family=Barlow:wght@400;500;600&display=swap" rel="stylesheet">
