--- a/powered-access.html
+++ b/powered-access.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
   <title>Access &amp; Spider Lifts for Hire | Navan Hire &amp; Hardware</title>
   <meta name="description" content="Diesel and electric boom lifts, spider lifts and scissor lifts for hire. Delivering across Meath, Dublin and the North East. Free site survey available."/>
+  <link rel="canonical" href="https://KeithD30.github.io/navanhire.github.io/powered-access.html"/>
+  <meta property="og:title" content="Access &amp; Spider Lifts for Hire | Navan Hire &amp; Hardware"/>
+  <meta property="og:description" content="Diesel and electric boom lifts, spider lifts and scissor lifts for hire. Delivering across Meath, Dublin and the North East. Free site survey available."/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://KeithD30.github.io/navanhire.github.io/powered-access.html"/>
+  <meta property="og:site_name" content="Navan Hire &amp; Hardware"/>
+  <meta property="og:locale" content="en_IE"/>
+  <meta name="twitter:card" content="summary"/>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700;800&family=Barlow:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css"/>
@@ -43,7 +52,7 @@
           <div class="pa-card-body">
             <div class="pa-card-title">Diesel Boom Lifts</div>
             <div class="pa-card-desc">Articulated and telescopic diesel boom lifts from 40ft to 135ft. Rough-terrain 4WD — ideal for outdoor construction, facade work and large sites.</div>
-            <div class="pa-card-meta">10 machines</div>
+            <div class="pa-card-meta">8 machines</div>
           </div>
           <span class="hc-arrow">&#8250;</span>
         </div>
@@ -58,7 +67,7 @@
           <div class="pa-card-body">
             <div class="pa-card-title">Electric Boom Lifts</div>
             <div class="pa-card-desc">Zero-emission electric boom lifts from 30ft to 45ft. Quiet and clean — perfect for indoor use, environmentally sensitive sites and warehouses.</div>
-            <div class="pa-card-meta">2 machines</div>
+            <div class="pa-card-meta">4 machines</div>
           </div>
           <span class="hc-arrow">&#8250;</span>
         </div>
@@ -139,7 +148,7 @@
   </section>
 
   <script>
-  var PA_DATA = {"Diesel Boom Lifts": [{"name": "BOOM LIFT 135FT ARTICULATED", "d1": "850", "d2": "1250", "d3": "1550", "we": "850"}, {"name": "S125 BOOM LIFT", "d1": "850", "d2": "1250", "d3": "1550", "we": "850"}, {"name": "BOOM LIFT 85FT STRAIGHT", "d1": "450", "d2": "625", "d3": "750", "we": "450"}, {"name": "80 FT ARTICULATED BOOM LIFT", "d1": "450", "d2": "625", "d3": "750", "we": "450"}, {"name": "BOOM LIFT 60' ARTICULATED BOOM", "d1": "295", "d2": "450", "d3": "575", "we": "340"}, {"name": "BOOM LIFT 45FT Z45", "d1": "250", "d2": "350", "d3": "450", "we": "295"}, {"name": "BOOM LIFT 40FT TOWABLE ARTICULATED", "d1": "250", "d2": "350", "d3": "395", "we": "250"}, {"name": "BOOM LIFT 40FT TOWABLE", "d1": "250", "d2": "350", "d3": "395", "we": "250"}, {"name": "BOOM LIFT 38'  5'WIDE UPRIGHT", "d1": "250", "d2": "350", "d3": "450", "we": "250"}, {"name": "BOOM LIFT 30FT", "d1": "250", "d2": "350", "d3": "450", "we": "250"}], "Electric Boom Lifts": [{"name": "BOOM LIFT 45FT ELECTRIC", "d1": "295", "d2": "425", "d3": "550", "we": "350"}, {"name": "TOUCAN 10E", "d1": "250", "d2": "350", "d3": "450", "we": "250"}], "Spider Lifts": [{"name": "26M SPIDER BOOM LIFT", "d1": "1300", "d2": "1700", "d3": "2000", "we": "1300"}, {"name": "20M SPIDER BOOM LIFT", "d1": "800", "d2": "1200", "d3": "1500", "we": "800"}, {"name": "17M SPIDER BOOM LIFT", "d1": "550", "d2": "800", "d3": "950", "we": "550"}, {"name": "15M SPIDER BOOM LIFT", "d1": "450", "d2": "650", "d3": "750", "we": "450"}], "Diesel Scissor Lifts": [{"name": "20M SCISSORS LIFT", "d1": "550", "d2": "750", "d3": "1050", "we": "550"}, {"name": "SCISSORS LIFT 50FT ALL-TERRAIN", "d1": "275", "d2": "425", "d3": "475", "we": "295"}, {"name": "SCISSORS LIFT 40FT ALL TERRAIN NARROW", "d1": "250", "d2": "375", "d3": "450", "we": "250"}, {"name": "SCISSORS LIFT 26 ALL TERRAIN DIESEL", "d1": "270", "d2": "350", "d3": "400", "we": "270"}], "Electric Scissor Lifts": [{"name": "SCISSORS LIFT 40 FT ELECTRIC", "d1": "300", "d2": "450", "d3": "495", "we": "300"}, {"name": "SCISSORS LIFT 40FT ALL-TERRAIN ELECTRIC", "d1": "250", "d2": "375", "d3": "450", "we": "250"}, {"name": "SCISSORS LIFT 32 FT  110V", "d1": "165", "d2": "260", "d3": "295", "we": "195"}, {"name": "SCISSORS LIFT 26FT", "d1": "125", "d2": "225", "d3": "275", "we": "180"}, {"name": "SCISSORS  LIFT 19FT", "d1": "95", "d2": "185", "d3": "225", "we": "150"}, {"name": "SKYJACK SJ16", "d1": "95", "d2": "185", "d3": "225", "we": "150"}, {"name": "SCISSORS 10FT ELECTRIC", "d1": "85", "d2": "170", "d3": "200", "we": "130"}]};
+  var PA_DATA = {"Diesel Boom Lifts": [{"name": "BOOM LIFT 135FT ARTICULATED", "d1": "850", "d2": "1250", "d3": "1550", "we": "850"}, {"name": "S125 BOOM LIFT", "d1": "850", "d2": "1250", "d3": "1550", "we": "850"}, {"name": "BOOM LIFT 85FT STRAIGHT", "d1": "450", "d2": "625", "d3": "750", "we": "450"}, {"name": "80 FT ARTICULATED BOOM LIFT", "d1": "450", "d2": "625", "d3": "750", "we": "450"}, {"name": "BOOM LIFT 60' ARTICULATED BOOM", "d1": "295", "d2": "450", "d3": "575", "we": "340"}, {"name": "BOOM LIFT 45FT Z45", "d1": "250", "d2": "350", "d3": "450", "we": "295"}, {"name": "BOOM LIFT 40FT TOWABLE ARTICULATED", "d1": "250", "d2": "350", "d3": "395", "we": "250"}, {"name": "BOOM LIFT 40FT TOWABLE", "d1": "250", "d2": "350", "d3": "395", "we": "250"}], "Electric Boom Lifts": [{"name": "BOOM LIFT 45FT ELECTRIC", "d1": "295", "d2": "425", "d3": "550", "we": "350"}, {"name": "BOOM LIFT 38'  5'WIDE UPRIGHT", "d1": "250", "d2": "350", "d3": "450", "we": "250"}, {"name": "BOOM LIFT 30FT", "d1": "250", "d2": "350", "d3": "450", "we": "250"}, {"name": "TOUCAN 10E", "d1": "250", "d2": "350", "d3": "450", "we": "250"}], "Spider Lifts": [{"name": "26M SPIDER BOOM LIFT", "d1": "1300", "d2": "1700", "d3": "2000", "we": "1300"}, {"name": "20M SPIDER BOOM LIFT", "d1": "800", "d2": "1200", "d3": "1500", "we": "800"}, {"name": "17M SPIDER BOOM LIFT", "d1": "550", "d2": "800", "d3": "950", "we": "550"}, {"name": "15M SPIDER BOOM LIFT", "d1": "450", "d2": "650", "d3": "750", "we": "450"}], "Diesel Scissor Lifts": [{"name": "20M SCISSORS LIFT", "d1": "550", "d2": "750", "d3": "1050", "we": "550"}, {"name": "SCISSORS LIFT 50FT ALL-TERRAIN", "d1": "275", "d2": "425", "d3": "475", "we": "295"}, {"name": "SCISSORS LIFT 40FT ALL TERRAIN NARROW", "d1": "250", "d2": "375", "d3": "450", "we": "250"}, {"name": "SCISSORS LIFT 26 ALL TERRAIN DIESEL", "d1": "270", "d2": "350", "d3": "400", "we": "270"}], "Electric Scissor Lifts": [{"name": "SCISSORS LIFT 40 FT ELECTRIC", "d1": "300", "d2": "450", "d3": "495", "we": "300"}, {"name": "SCISSORS LIFT 40FT ALL-TERRAIN ELECTRIC", "d1": "250", "d2": "375", "d3": "450", "we": "250"}, {"name": "SCISSORS LIFT 32 FT  110V", "d1": "165", "d2": "260", "d3": "295", "we": "195"}, {"name": "SCISSORS LIFT 26FT", "d1": "125", "d2": "225", "d3": "275", "we": "180"}, {"name": "SCISSORS  LIFT 19FT", "d1": "95", "d2": "185", "d3": "225", "we": "150"}, {"name": "SKYJACK SJ16", "d1": "95", "d2": "185", "d3": "225", "we": "150"}, {"name": "SCISSORS 10FT ELECTRIC", "d1": "85", "d2": "170", "d3": "200", "we": "130"}]};
   var PA_CAT_NAMES = ["Diesel Boom Lifts", "Electric Boom Lifts", "Spider Lifts", "Diesel Scissor Lifts", "Electric Scissor Lifts"];
 var PA_CAT_INFO  = {"Diesel Boom Lifts": {"icon": "<i data-lucide=\"crane\"></i>", "desc": "Articulated and telescopic diesel boom lifts from 40ft to 135ft. Rough-terrain 4WD — ideal for outdoor construction, facade work and large sites.", "img": "images/access/diesel-boom.jpg"}, "Electric Boom Lifts": {"icon": "<i data-lucide=\"zap\"></i>", "desc": "Zero-emission electric boom lifts from 30ft to 45ft. Quiet and clean — perfect for indoor use, environmentally sensitive sites and warehouses.", "img": "images/access/electric-boom.jpg"}, "Spider Lifts": {"icon": "<i data-lucide=\"bug\"></i>", "desc": "Track-mounted spider boom lifts from 15m to 26m. Works on slopes, lawns, delicate floors and in confined spaces where no other machine can reach.", "img": "images/access/spider-lift.jpg"}, "Diesel Scissor Lifts": {"icon": "<i data-lucide=\"move-vertical\"></i>", "desc": "Rough-terrain and all-terrain diesel scissor lifts from 26ft to 65ft. Built for outdoor sites with uneven ground.", "img": "images/access/diesel-scissors.jpg"}, "Electric Scissor Lifts": {"icon": "<i data-lucide=\"square\"></i>", "desc": "Electric scissor lifts from 10ft to 40ft. Compact, quiet and zero-emissions — the most popular machine for indoor maintenance, fit-out and retail.", "img": "images/access/electric-scissors.jpg"}};
 
