--- a/telehandlers.html
+++ b/telehandlers.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
   <title>Telehandlers for Hire | Navan Hire &amp; Hardware</title>
   <meta name="description" content="360 Roto, straight and buggyscopic telehandlers, forklifts and attachments for hire from Navan, Co. Meath."/>
+  <link rel="canonical" href="https://KeithD30.github.io/navanhire.github.io/telehandlers.html"/>
+  <meta property="og:title" content="Telehandlers for Hire | Navan Hire &amp; Hardware"/>
+  <meta property="og:description" content="360 Roto, straight and buggyscopic telehandlers, forklifts and attachments for hire from Navan, Co. Meath."/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://KeithD30.github.io/navanhire.github.io/telehandlers.html"/>
+  <meta property="og:site_name" content="Navan Hire &amp; Hardware"/>
+  <meta property="og:locale" content="en_IE"/>
+  <meta name="twitter:card" content="summary"/>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700;800&family=Barlow:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css"/>
@@ -14,7 +23,7 @@
   <div class="topbar" data-component></div>
   <header class="header" data-component></header>
 
-  <section class="pa-hero">
+  <section class="pa-hero th-hero">
     <div class="container">
       <nav class="hc-breadcrumb" id="thBreadcrumb">
         <span class="hc-bc-item hc-bc-active">Telehandlers</span>
@@ -33,12 +42,7 @@
     <div id="thLevel1">
       <div class="pa-group-grid">
         <div class="pa-group-card" data-idx="0" onclick="thOpenCat(this)">
-          <!-- IMAGE SLOT: save photo as images/telehandlers/360-roto.jpg -->
           <div class="pa-card-img" style="background-image:url('images/telehandlers/360-roto.jpg')">
-            <div class="pa-card-img-placeholder">
-              <span class="pa-card-img-icon"><i data-lucide="rotate-cw"></i></span>
-              <span class="pa-card-img-hint">&#128247; images/telehandlers/360-roto.jpg</span>
-            </div>
           </div>
           <div class="pa-card-body">
             <div class="pa-card-title">360° Roto Telehandlers</div>
@@ -317,6 +321,6 @@
   <script src="prod-tabs.js"></script>
   <script src="search.js"></script>
   <script src="main.js"></script>
-  <script>lucide.createIcons();</script>
+  <script>lucide.createIcons();</script>  </script>
 </body>
 </html>
