--- a/account.html
+++ b/account.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
   <title>Trade Account | Navan Hire &amp; Hardware</title>
   <meta name="description" content="Log in or apply for a trade credit account with Navan Hire &amp; Hardware."/>
+  <link rel="canonical" href="https://KeithD30.github.io/navanhire.github.io/account.html"/>
+  <meta property="og:title" content="Trade Account | Navan Hire &amp; Hardware"/>
+  <meta property="og:description" content="Log in or apply for a trade credit account with Navan Hire &amp; Hardware."/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://KeithD30.github.io/navanhire.github.io/account.html"/>
+  <meta property="og:site_name" content="Navan Hire &amp; Hardware"/>
+  <meta property="og:locale" content="en_IE"/>
+  <meta name="twitter:card" content="summary"/>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700;800&family=Barlow:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css"/>
